[project]
name = "greenlamp"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "greenlampgh", email = "greenlampgh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "maturin>=1.9.3",
    "torch>=2.8.0",
    "twine>=6.2.0",
]

[tool.maturin]
module-name = "greenlamp._core"
python-packages = ["greenlamp"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
